--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "graphql": "^16.8.1",
+    "graphql-ws": "^5.16.0",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "react": "^18",
